# AlignJuice

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
alignjuice/: __init__.py  cli.py
alignjuice/config/: __init__.py  loader.py  schema.py
alignjuice/core/: __init__.py  data_container.py  pipeline.py  registry.py
alignjuice/integrations/: __init__.py
alignjuice/integrations/embeddings/: __init__.py  base.py  factory.py  openai_embeddings.py  sentence_transformers.py
alignjuice/integrations/llm/: __init__.py  base.py  factory.py  ollama.py  openai.py
alignjuice/io/: __init__.py
alignjuice/io/readers/: __init__.py
alignjuice/io/writers/: __init__.py
alignjuice/operators/: __init__.py  base.py
alignjuice/operators/dedup/: __init__.py  exact.py  semantic.py
alignjuice/operators/filter/: __init__.py  diversity.py  knowledge.py  quality.py
alignjuice/operators/transform/: __init__.py  reasoning_chain.py  synthesis.py
alignjuice/operators/validate/: __init__.py  noise_detector.py
alignjuice/stages/: __init__.py  base.py  s1_data_juicer.py  s2_knowledge_filter.py  s3_reasoning_enhance.py  s4_sandbox_eval.py
configs/: baike_demo.yaml  default.yaml
docs/: PRESENTATION_OUTLINE.md  PROJECT_OVERVIEW.md
experiments/: AUTODL_GUIDE.md  README.md  analyze_results.py  human_eval.py  prepare_data.py  run_eval.sh  run_training.sh
experiments/configs/: dataset_info.json  train_template.yaml
experiments/data/: alignjuice_1k.json  alignjuice_3k.json  baseline_10k.json  baseline_1k.json  baseline_3k.json
notebooks/: 01_data_exploration.ipynb  04_custom_operators.ipynb
scripts/: convert_baike.py  run_baike_demo.py  run_baike_full.py  run_baike_offline.py
tests/: test_minimal.py
